Quick fix for accidental include of controller.

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -9,7 +9,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/app.css"></link>
 </head>
-<body ng-controller="HomeController">
+<body>
 
 	<h1>
 		Using Plupload To Upload Files Directly To Amazon S3 Using PUT And Pre-Signed URLs
